@@ -1,3 +1,5 @@
+DIST xVST_2_1_src.zip 3201031 RMD160 9e6a757b53c61252fdbb7ddc2216f2fe5fa9817f SHA1 ab98bff7c8b01697e98fc06e70cb893fb521811b SHA256 1d093e1a3aeceece4dce30744b9c3512345340d4695d41cf65a35b49565b0c89
+EBUILD xvideoservicethief-2.1.ebuild 1999 RMD160 72862607782066e143d0d1ae5b59d8ea78b45a9b SHA1 798d7f3fcb9572a83ba6806f6644d08c3f8870e1 SHA256 4da290312efa18c46646e02cc10848e70eafe620deedd50e4edf837810b0ba5a
 EBUILD xvideoservicethief-9999.ebuild 1752 RMD160 2d448095f88d5d874a92c6f88999a27ef6154c3e SHA1 9043a6cc2c042d9ccf17938c331bcab8c9f942c0 SHA256 560996a6f53f64f0f0c195e248d4c73c2062b24dfdfbdd4746aec7eeada95c79
-MISC ChangeLog 1469 RMD160 de3afb440e67fce2bee286aa0b942f243ea12496 SHA1 7b1ea3688ac4db0635732f856fbe81456f174b37 SHA256 afc69155cb52871e00c303e5ca7c22a622d7f17191f3c77311fab29ac0c214ca
+MISC ChangeLog 1611 RMD160 091a3dfd030406e01ea206b387fd83e69dbd8226 SHA1 6b386632437f800867f3af91725a6fda3c79f3ca SHA256 998f97b7c59d9d8e5d83d0b2ead90c2232b5c24be164f9eae16d2237ae123a2f
 MISC metadata.xml 178 RMD160 91f88b965189260ac1fe4efae4bfbb857cabc4db SHA1 cef36307764cbf7dea255f4cd6b8520d7065ab30 SHA256 3e6e50d439f99a10df9c43fb7fe940f96056bb6f08e1342fe71e60100676f267
