@@ -2,6 +2,12 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*xvideoservicethief-2.1 (04 Jul 2009)
+
+  04 Jul 2009; Markos Chandras <hwoarang@gentoo.org>
+  +xvideoservicethief-2.1.ebuild:
+  Version bump
+
   08 Jun 2009; Markos Chandras <hwoarang@gentoo.org>
   xvideoservicethief-9999.ebuild:
   Sync with portage
